--- a/MovieBookingPlatform/src/MovieService/MovieService.csproj
+++ b/MovieBookingPlatform/src/MovieService/MovieService.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Configurations\Settings\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookingService\BookingService.csproj" />
+  </ItemGroup>
+
 </Project>
